// Vitest Snapshot v1, https://vitest.dev/guide/snapshot.html

exports[`configRouter > getGlobalConfig > Model Provider env > OPENAI_MODEL_LIST > custom deletion, addition, and renaming of models 1`] = `
{
  "enabled": true,
  "enabledModels": [
    "llama",
    "claude-2",
    "gpt-4-0125-preview",
  ],
  "serverModelCards": [
    {
      "displayName": "llama",
      "enabled": true,
      "id": "llama",
    },
    {
      "displayName": "claude-2",
      "enabled": true,
      "id": "claude-2",
    },
    {
      "description": "最新的 GPT-4 Turbo 模型具备视觉功能。现在，视觉请求可以使用 JSON 模式和函数调用。 GPT-4 Turbo 是一个增强版本，为多模态任务提供成本效益高的支持。它在准确性和效率之间找到平衡，适合需要进行实时交互的应用程序场景。",
      "displayName": "gpt-4-32k",
      "enabled": true,
      "functionCall": true,
      "id": "gpt-4-0125-preview",
      "pricing": {
        "input": 10,
        "output": 30,
      },
      "tokens": 128000,
    },
  ],
}
`;

exports[`configRouter > getGlobalConfig > Model Provider env > OPENAI_MODEL_LIST > should work correct with gpt-4 1`] = `
[
  {
    "description": "GPT 3.5 Turbo，适用于各种文本生成和理解任务，Currently points to gpt-3.5-turbo-0125",
    "displayName": "GPT-3.5 Turbo 1106",
    "enabled": true,
    "functionCall": true,
    "id": "gpt-3.5-turbo-1106",
    "pricing": {
      "input": 1,
      "output": 2,
    },
    "tokens": 16385,
  },
  {
    "description": "GPT 3.5 Turbo，适用于各种文本生成和理解任务，Currently points to gpt-3.5-turbo-0125",
    "displayName": "GPT-3.5 Turbo",
    "enabled": true,
    "functionCall": true,
    "id": "gpt-3.5-turbo",
    "pricing": {
      "input": 0.5,
      "output": 1.5,
    },
    "tokens": 16385,
  },
  {
    "description": "GPT-4 提供了一个更大的上下文窗口，能够处理更长的文本输入，适用于需要广泛信息整合和数据分析的场景。",
    "displayName": "GPT-4",
    "enabled": true,
    "functionCall": true,
    "id": "gpt-4",
    "pricing": {
      "input": 30,
      "output": 60,
    },
    "tokens": 8192,
  },
  {
    "description": "GPT-4 提供了一个更大的上下文窗口，能够处理更长的文本输入，适用于需要广泛信息整合和数据分析的场景。",
    "displayName": "GPT-4 32K",
    "enabled": true,
    "functionCall": true,
    "id": "gpt-4-32k",
    "pricing": {
      "input": 60,
      "output": 120,
    },
    "tokens": 32768,
  },
  {
    "description": "最新的 GPT-4 Turbo 模型具备视觉功能。现在，视觉请求可以使用 JSON 模式和函数调用。 GPT-4 Turbo 是一个增强版本，为多模态任务提供成本效益高的支持。它在准确性和效率之间找到平衡，适合需要进行实时交互的应用程序场景。",
    "displayName": "GPT-4 Turbo Preview 1106",
    "enabled": true,
    "functionCall": true,
    "id": "gpt-4-1106-preview",
    "pricing": {
      "input": 10,
      "output": 30,
    },
    "tokens": 128000,
  },
  {
    "description": "最新的 GPT-4 Turbo 模型具备视觉功能。现在，视觉请求可以使用 JSON 模式和函数调用。 GPT-4 Turbo 是一个增强版本，为多模态任务提供成本效益高的支持。它在准确性和效率之间找到平衡，适合需要进行实时交互的应用程序场景。",
    "displayName": "GPT-4 Turbo Vision Preview",
    "enabled": true,
    "id": "gpt-4-vision-preview",
    "pricing": {
      "input": 10,
      "output": 30,
    },
    "tokens": 128000,
    "vision": true,
  },
]
`;

exports[`configRouter > getGlobalConfig > Model Provider env > OPENAI_MODEL_LIST > show the hidden model 1`] = `
{
  "description": "最新的 GPT-4 Turbo 模型具备视觉功能。现在，视觉请求可以使用 JSON 模式和函数调用。 GPT-4 Turbo 是一个增强版本，为多模态任务提供成本效益高的支持。它在准确性和效率之间找到平衡，适合需要进行实时交互的应用程序场景。",
  "displayName": "GPT-4 Turbo Preview 1106",
  "enabled": true,
  "functionCall": true,
  "id": "gpt-4-1106-preview",
  "pricing": {
    "input": 10,
    "output": 30,
  },
  "tokens": 128000,
}
`;

exports[`configRouter > getGlobalConfig > Model Provider env > OPENROUTER_MODEL_LIST > custom deletion, addition, and renaming of models 1`] = `
{
  "enabled": false,
  "enabledModels": [
    "google/gemma-7b-it:free",
    "mistralai/mistral-7b-instruct:free",
  ],
  "serverModelCards": [
    {
      "description": "Google 的 Gemma 7B 具有出色的计算效率，适适用于多种硬件架构，如GPU和TPU。",
      "displayName": "Google: Gemma 7B (free)",
      "enabled": true,
      "functionCall": false,
      "id": "google/gemma-7b-it:free",
      "tokens": 8192,
      "vision": false,
    },
    {
      "description": "Mistral 7B Instruct 是一款高效的多语言模型，优化用于对话和问答，能在资源受限的环境中表现出色。",
      "displayName": "Mistral 7B Instruct (free)",
      "enabled": true,
      "functionCall": false,
      "id": "mistralai/mistral-7b-instruct:free",
      "tokens": 32768,
      "vision": false,
    },
  ],
}
`;
